--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ cursor: pointer;
   width: 100%;
 }
 
+
 .food__image{
   width: 100%;
   border-radius: 8px 8px 0 0;
@@ -103,6 +104,52 @@ cursor: pointer;
 .food__card__description{
   padding: 15px;
 }
+
+/* Flexxxxxxxxxxxxx */
+.restaurant__text{
+  font-size: 30px;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  text-align: center;
+
+}
+
+.restaurant__image__container{
+  width:100%;
+}
+
+.restaurant__image__row__one,
+.restaurant__image__row__two{
+  width: 100%;
+  display: flex;
+  gap: 3px;
+}
+
+.restaurant__image__row__one{
+  align-items: baseline;
+  margin-bottom: 3px;
+}
+
+.restaurant__image__1,
+.restaurant__image__4{
+  width: 100%;
+  height: 120px;
+}
+
+.restaurant__image__2,
+.restaurant__image__3{
+  width: 120%;
+  height: 200px;
+}
+
+.restaurant__1,
+.restaurant__2,
+.restaurant__3,
+.restaurant__4 {
+  width: 100%;
+  height: 100%;
+}
+
 
 @media (min-width: 768px){
    .navbar {
@@ -159,6 +206,15 @@ cursor: pointer;
    transform: skewY(-5deg);
    z-index: -3;
  }
+
+ .restaurant__container{
+  display: flex;
+  align-items: center;
+ }
+  .restaurant__text{
+    width:100%;
+    font-size: 40px
+  }
 }
 
 @media (min-width: 1020px) { 
